--- a/views/404/404.html
+++ b/views/404/404.html
@@ -15,166 +15,66 @@
     <title>Productos - Gamma Distribuciones</title>
 </head>
 <body>
-    <!-- HEADER = START -->
-    <header class="header navbar navbar-expand-lg pt-0 pb-0 col-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="header__first container-fluid p-0 col-12 col-lg-12">
-            <!-- HEADER-logo = START -->
-            <div class="header__first--logo col-6 col-lg-5 me-auto">
-                <a class="navbar-brand m-0 p-0" href="../../index.html">
-                    <img class="header__first--logo--mini" src="../../imagenes/gborde.png" alt="logo chico">
-                    <img class="header__first--logo--full" src="../../imagenes/full_logo.png" alt="logo grande">
-                </a>
-            </div>
-            <!-- HEADER-logo = END -->
-            <!-- HEADER-sup = START -->
-            <div class="header__first--nav-sup col-6 m-auto">
-                <button class="header__first--nav-sup--lupa  bi bi-list navbar-toggler outline-none p-0 border-0" id="lupaButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav1" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"">
-                    <svg class="header__first--nav-sup--lupa--1" id="lupaOpen" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                    </svg>
-                    <svg class="header__first--nav-sup--lupa--2 bi bi-list bi bi-x" id="lupaClose" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
-                    </svg>
-                </button>
-                <button class="header__first--nav-sup--list bi bi-list navbar-toggler outline-none p-0 border-0" id="listButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <svg class="header__first--nav-sup--list--1 bi bi-list" id="listOpen" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                    </svg>
-                    <svg class="header__first--nav-sup--list--2 bi bi-list bi bi-x" id="listClose" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
-                    </svg>
-                </button>
-            </div>
-            <!-- HEADER-sup = END -->
-<!-- NAV = START -->
-            <nav class="nav collapse navbar-collapse col-12 col-lg-4" id="navbarNav">
-            <!-- NAV-items = START -->
-                <!-- NAV-login = START -->
-                <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
-                    <a class="nav__log--login" href="../404/404.html">
-                        <button class="nav__log--login--button">
-                            <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
-                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario 2">
-                            <span class="nav__log--login--button--span1">Acceder</span>
-                        </button>
-                    </a>
-                </div>
-                <!-- NAV-login = END -->
-                <ul class="nav__ul navbar-nav col-12 col-lg-8">
-                    <li class="nav__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-link hover" aria-current="page" href="#Productos">
-                            <svg class="nav__ul--li--svg bi bi-nut" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                                <path d="m11.42 2 3.428 6-3.428 6H4.58L1.152 8 4.58 2h6.84zM4.58 1a1 1 0 0 0-.868.504l-3.428 6a1 1 0 0 0 0 .992l3.428 6A1 1 0 0 0 4.58 15h6.84a1 1 0 0 0 .868-.504l3.429-6a1 1 0 0 0 0-.992l-3.429-6A1 1 0 0 0 11.42 1H4.58z"/>
-                                <path d="M6.848 5.933a2.5 2.5 0 1 0 2.5 4.33 2.5 2.5 0 0 0-2.5-4.33zm-1.78 3.915a3.5 3.5 0 1 1 6.061-3.5 3.5 3.5 0 0 1-6.062 3.5z"/>
-                            </svg>
-                            <h3 class="nav__ul--li--subpages">Productos</h3>
-                        </a>
-                    </li>
-                    <li class="nav__ul--li nav-item container-fluid p-0" id="NovedadesItem">
-                        <a class="nav-link hover" aria-current="page" href="../novedades/novedades.html">
-                            <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                                <path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z"/>
-                            </svg>
-                            <h3 class="nav__ul--li--subpages">Novedades</h3>
-                        </a>
-                    </li>
-                    <li class="nav__ul--li nav-item container-fluid p-0" id="CarritoItem">
-                        <a class="nav-link hover" aria-current="page" href="../carrito/carrito.html">
-                            <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                            </svg>
-                            <h3 class="nav__ul--li--subpages">Tu Carrito</h3>
-                        </a>
-                    </li>
-                    <li class="nav__ul--li nav-item container-fluid p-0" id="BusquedaNav">
-                        <a class="nav-link hover" aria-current="page" href="../404/404.html">
-                            <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-                <!-- NAV-subpaginas = START -->
-                <div class="nav__text">
-                    <ul class="nav__text--ul m-0 p-0">
-                        <li class="nav__text--ul--subpages-text-only" id="NosotrosItem">
-                            <a href="../nosotros/nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav__text--ul--subpages-text-only" id="ContactanosItem">
-                            <a href="#footer-nav">Contactanos</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- NAV-subpaginas = END -->
-            <!-- NAV-items = END -->
-            </nav>
-<!-- NAV = END  -->
-<!-- BUSCAR = START -->
-            <nav class="nav-2 collapse col-12 col-lg-4" id="navbarNav1">
-                <!-- BUSCAR-buscador = START -->
-                <form class="nav-2__form m-0">
-                    <span class="nav-2__form--lupa">
-                        <svg class="nav-2__form--lupa--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
-                        </svg>
-                    </span>
-                    <input class="nav-2__form--input" type="text" placeholder="Buscar" action="#">
-                </form>
-                <!-- BUSCAR-buscador = END -->
-                <!-- BUSCAR-destacados = START -->
-                <h3 class="nav-2__h3">Mas buscados</h3>
-                <ul class="nav-2__ul navbar-nav col-12 col-lg-8">
-                    <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="#Productos">
-                            <h4 class="nav-2__ul--li--a--h4">T1 Aguja 8x9/16</h4>
-                        </a>
-                    </li>
-                    <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="#Productos">
-                            <h4 class="nav-2__ul--li--a--h4">Fix 5x45</h4>
-                        </a>
-                    </li>
-                    <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="#Productos">
-                            <h4 class="nav-2__ul--li--a--h4">T1 Mecha 8x1/2</h4>
-                        </a>
-                    </li>
-                    <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="#Productos">
-                            <h4 class="nav-2__ul--li--a--h4">Hex T2 14x2</h4>
-                        </a>
-                    </li>
-                </ul>
-                <!-- BUSCAR-destacados = START -->
-            </nav>
-<!-- BUSCAR = END  -->
-        </div>
-        <!-- HEADER-subpaginas-desktop = START -->
-        <div class="header__desktop-subpages col-lg-12">
-            <ul class="header__desktop-subpages__ul">
-                <li class="header__desktop-subpages__ul--li">
-                    <a href="#Productos">Productos</a>
-                </li>
-                <li class="header__desktop-subpages__ul--li">
-                    <a href="../nosotros/nosotros.html">Nosotros</a>
-                </li>
-                <li class="header__desktop-subpages__ul--li">
-                    <a href="#footer-nav">Contactanos</a>
-                </li>
-            </ul>
-        </div>
-        <!-- HEADER-subpaginas-desktop = END -->
-    </header>
-<!-- HEADER = END -->
     <main class="main-404">
         <section class="main-404__animation-404"></section>
         <div class="main-404__div">
             <h1 class="main-404__div--h1">404</h1>
-            <h2 class="main-404__div--h2">Lo sentimos, pero la pagina que estas buscando no existe</h2>
-            <a class="main-404__div--a" href="../../index.html">
-                <h3 class="main-404__div--a--h3">Volver al inicio</h3>
-            </a>
+            <h2 class="main-404__div--h2">Lo sentimos, pero la pgina que estas buscando no existe</h2>
         </div>
-        
     </main>
+    <section class="section-404">
+        <h3 class="section-404__h3 m-0 col-12">Igualmente aquí hay cosas que podrían llegar a interesarte...</h3>
+        <div class="section-404__div carousel slide" id="carouselExampleCaptions">
+            <div class="section-404__div--card carousel-inner">
+                <a class="section-404__div--card--a" href="../productos/productos.html">
+                    <div class="section-404__div--card--a--content carousel-item active">
+                        <img class="section-404__div--card--a--content--img d-block w-100" src="../../imagenes/card-productos.webp" alt="card a productos">
+                        <div class="section-404__div--card--a--content--div carousel-caption d-block">
+                            <h5 class="section-404__div--card--a--content--div--h5">Productos</h5>
+                        </div>
+                    </div>
+                </a>
+                <a class="section-404__div--card--a" href="../novedades/novedades.html">
+                <div class="section-404__div--card--a--content carousel-item">
+                    <img class="section-404__div--card--a--content--img d-block w-100" src="../../imagenes/card-novedades.webp" alt="card novedades">
+                    <div class="section-404__div--card--a--content--div carousel-caption d-block">
+                        <h5 class="section-404__div--card--a--content--div--h5">Novedades</h5>
+                    </div>
+                </div>
+                </a>
+                <a class="section-404__div--card--a" href="../nosotros/nosotros.html">
+                <div class="section-404__div--card--a--content carousel-item">
+                    <img class="section-404__div--card--a--content--img d-block w-100" src="../../imagenes/logo-foto.webp" alt="card nosotros">
+                    <div class="section-404__div--card--a--content--div carousel-caption d-block">
+                        <h5 class="section-404__div--card--a--content--div--h5">Nosotros</h5>
+                    </div>
+                </div>
+                </a>
+            </div>
+            <div class="section-404__div--buttons carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <a class="main-404__a" href="../../index.html">
+            <h4 class="main-404__a--h4">Volver al inicio</h4>
+        </a>
+    </section>
 </body>
+<!-- SCRIPTS = START -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="../../js/wow.js"></script>
+<script>
+new WOW().init();
+</script>
+<script src="../../js/buscador.js"></script>
+<!-- SCRIPTS = END -->
