--- a/css/main.css
+++ b/css/main.css
@@ -1897,18 +1897,196 @@ html {
 /* ---------BREAKPOINT-DESKTOP-NOS = END--------- */
 /* ---------------NOSOTROS=END----------------- */
 .main-404 {
+  width: 100vw;
+  height: 60vh;
   background-size: cover;
 }
 .main-404__animation-404 {
+  background-position: 50% -300px;
   background-image: url(../imagenes/deposito-gamma.webp);
 }
 .main-404__div {
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  position: absolute;
+  top: -20%;
+  left: 0;
   overflow: hidden;
 }
-.main-404__div--h1 {
-  font-size: 13vw;
+.main-404__div h1 {
+  font-size: 30vw;
   font-weight: 800;
   color: rgb(255, 251, 252);
+}
+.main-404__div--h2 {
+  width: 90%;
+  font-size: 7vw;
+  font-weight: 500;
+  color: rgb(255, 251, 252);
+  flex-wrap: wrap;
+}
+.main-404__a {
+  text-decoration: none;
+}
+.main-404__a--h4 {
+  text-decoration: underline;
+  margin: 0;
+  padding: 20px 0 10px 0;
+  font-size: 4vw;
+  font-weight: 700;
+  color: rgb(30, 100, 100);
+}
+.main-404__a--h4:active {
+  font-size: 4.2vw;
+  font-weight: 700;
+  color: rgb(110, 110, 110);
+}
+
+.section-404 {
+  display: flex;
+  width: 100%;
+  height: 40vh;
+  padding: 10px;
+  flex-direction: column;
+  background-color: rgb(235, 235, 235);
+  text-align: center;
+}
+.section-404__h3 {
+  width: 100%;
+  font-size: 6vw;
+  font-weight: 700;
+  color: rgb(30, 100, 100);
+  margin: 0;
+  padding: 10px;
+}
+.section-404__div--card {
+  justify-content: center;
+  align-items: center;
+}
+.section-404__div--card--a--content {
+  padding: 0 0 10px 0;
+}
+.section-404__div--card--a--content--img {
+  width: 60%;
+}
+.section-404__div--card--a--content--div--h5 {
+  font-size: 7vw;
+  font-weight: 500;
+  color: white;
+}
+
+@media (min-width: 576px) {
+  .main-404__div h1 {
+    font-size: 23vw;
+    font-weight: 800;
+    color: rgb(255, 251, 252);
+  }
+  .main-404__div--h2 {
+    font-size: 6vw;
+    font-weight: 500;
+    color: rgb(255, 251, 252);
+  }
+  .main-404__a--h4 {
+    font-size: 4.1vw;
+    font-weight: 700;
+    color: rgb(30, 100, 100);
+  }
+  .main-404__a--h4:active {
+    font-size: 4.3vw;
+    font-weight: 700;
+    color: rgb(110, 110, 110);
+  }
+  .section-404__h3 {
+    font-size: 4.5vw;
+    font-weight: 700;
+    color: rgb(30, 100, 100);
+  }
+  .section-404__div--card--a--content--div--h5 {
+    font-size: 5.5vw;
+    font-weight: 500;
+    color: white;
+  }
+}
+@media (min-width: 768px) {
+  .main-404__div h1 {
+    font-size: 18vw;
+    font-weight: 800;
+    color: rgb(255, 251, 252);
+  }
+  .main-404__div--h2 {
+    width: 70%;
+    font-size: 4vw;
+    font-weight: 500;
+    color: rgb(255, 251, 252);
+  }
+  .main-404__a--h4 {
+    font-size: 3.4vw;
+    font-weight: 700;
+    color: rgb(30, 100, 100);
+  }
+  .main-404__a--h4:active {
+    font-size: 3.5vw;
+    font-weight: 700;
+    color: rgb(110, 110, 110);
+  }
+  .section-404__h3 {
+    font-size: 3.5vw;
+    font-weight: 700;
+    color: rgb(30, 100, 100);
+  }
+  .section-404__div--card--a--content--div--h5 {
+    font-size: 4vw;
+    font-weight: 500;
+    color: white;
+  }
+}
+@media (min-width: 992px) {
+  .main-404__animation-404 {
+    background-position: 50% -100px;
+  }
+  .main-404__div h1 {
+    font-size: 14vw;
+    font-weight: 800;
+    color: rgb(255, 251, 252);
+  }
+  .main-404__div--h2 {
+    width: 70%;
+    font-size: 2vw;
+    font-weight: 500;
+    color: rgb(255, 251, 252);
+  }
+  .main-404__a--h4 {
+    font-size: 2vw;
+    font-weight: 700;
+    color: rgb(30, 100, 100);
+  }
+  .main-404__a--h4:active {
+    font-size: 2.1vw;
+    font-weight: 700;
+    color: rgb(110, 110, 110);
+  }
+  .section-404__h3 {
+    font-size: 1.8vw;
+    font-weight: 700;
+    color: rgb(30, 100, 100);
+  }
+  .section-404__div--card {
+    justify-content: center;
+    align-items: center;
+  }
+  .section-404__div--card--a--content {
+    justify-content: center;
+    align-items: center;
+  }
+  .section-404__div--card--a--content--img {
+    width: 80%;
+  }
+  .section-404__div--card--a--content--div--h5 {
+    font-size: 1.7vw;
+    font-weight: 500;
+    color: white;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
